--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div class="container">
-    <div class="header">
-        <h1>Find Your Job</h1>
-    </div>
-    <div class="tab">
+    <div class="header"><h1>Find Your Job</h1></div>
+    <div class="tabs">
         <button class="tablinks" (click)="tabNavigate('job-list')">List of Jobs</button>
         <button class="tablinks left" (click)="tabNavigate('job-favorite')">Favourite Jobs</button>
     </div>
